--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 org.gradle.internal.http.connectionTimeout=60000
 org.gradle.internal.http.socketTimeout=60000
+MAPS_API_KEY=AIzaSyDQOs9vE7YfgwOKbcbTXrkvHIhsZh8Xys4
